--- a/views/information.hbs
+++ b/views/information.hbs
@@ -1,11 +1,14 @@
 <!-- Body -->
 <div class="body-content container">
+	{{#with Data.User}}
 	<div class="row w-100 mx-0">
 		<div class="col-12 col-lg-3 infor-nav-menu">
 			<div class="jumbotron">
-				<div class="container w-100 p-0 d-flex flex-column justify-content-center align-items-center">
+				<div
+					class="container w-100 p-0 d-flex flex-column justify-content-center align-items-center"
+				>
 					<p class="member rounded shadow">USG Member</p>
-					<p class="name">Dương Tấn Phát</p>
+					<p class="name">{{ name }}</p>
 
 					<ul class="infor-menu">
 						<li>
@@ -37,14 +40,24 @@
 			<div class="form-infor container px-0">
 				<h3 style="color: #283657">THÔNG TIN TÀI KHOẢN</h3>
 				<div class="container px-0">
-					<form action="" class="needs-validation" novalidate>
+					<form
+						method="POST"
+						action="/infor"
+						class="needs-validation"
+						novalidate
+					>
 						<div class="row form-group">
 							<div class="col-3 p-0 d-flex align-items-center">
 								<label for="name">Họ Tên</label>
 							</div>
 							<div class="col-9 p-0">
-								<input type="text" class="form-control rounded-0" id="name" value="Dương Tấn Phát"
-									name="name" />
+								<input
+									type="text"
+									class="form-control rounded-0"
+									id="name"
+									value="{{ name }}"
+									name="name"
+								/>
 							</div>
 						</div>
 
@@ -53,8 +66,13 @@
 								<label for="email">Email</label>
 							</div>
 							<div class="col-9 p-0">
-								<input type="email" class="form-control rounded-0" id="email"
-									value="beebapcay@gmail.com" name="email" disabled />
+								<input
+									type="email"
+									class="form-control rounded-0"
+									id="email"
+									value="{{ email }}"
+									name="email"
+								/>
 							</div>
 						</div>
 
@@ -63,8 +81,13 @@
 								<label for="phone">Số Điện Thoại</label>
 							</div>
 							<div class="col-9 p-0">
-								<input type="phone" class="form-control rounded-0" id="phone" value="0964746011"
-									name="phone" />
+								<input
+									type="phone"
+									class="form-control rounded-0"
+									id="phone"
+									value="{{ phone }}"
+									name="phone"
+								/>
 							</div>
 						</div>
 
@@ -73,8 +96,14 @@
 								<label for="uname">Tên Đăng Nhập</label>
 							</div>
 							<div class="col-9 p-0">
-								<input type="text" class="form-control rounded-0" id="uname" value="beebapcay"
-									name="uname" disabled />
+								<input
+									type="text"
+									class="form-control rounded-0"
+									id="uname"
+									value="{{ username }}"
+									name="uname"
+									disabled
+								/>
 							</div>
 						</div>
 
@@ -83,8 +112,13 @@
 								<label for="address">Địa Chỉ</label>
 							</div>
 							<div class="col-9 p-0">
-								<input type="text" class="form-control rounded-0" id="address"
-									value="423/34/20 Lạc Long Quân, phường 5, quận 11, HCM" name="address" />
+								<input
+									type="text"
+									class="form-control rounded-0"
+									id="address"
+									value="{{ address }}"
+									name="address"
+								/>
 							</div>
 						</div>
 
@@ -93,8 +127,13 @@
 								<label for="dob">Ngày Sinh</label>
 							</div>
 							<div class="col-9 p-0">
-								<input type="date" class="form-control rounded-0" id="dob" value="2000-01-11"
-									name="dob" />
+								<input
+									type="date"
+									class="form-control rounded-0"
+									id="dob"
+									value="{{ DoB }}"
+									name="dob"
+								/>
 							</div>
 						</div>
 
@@ -104,14 +143,17 @@
 							</div>
 							<div class="col-9 p-0">
 								<div class="custom-control custom-radio custom-control-inline">
-									<input type="radio" class="custom-control-input" id="sex-male" name="sex"
-										value="male" checked />
+									<input type="radio" class="custom-control-input" id="sex-male"
+									name="sex" value="male" {{#if gender}}checked{{/if}}/>
 									<label class="custom-control-label" for="sex-male">Nam</label>
 								</div>
 								<div class="custom-control custom-radio custom-control-inline">
-									<input type="radio" class="custom-control-input" id="sex-female" name="sex"
-										value="female" />
-									<label class="custom-control-label" for="sex-female">Nữ</label>
+									<input type="radio" class="custom-control-input"
+									id="sex-female" name="sex" value="female"
+									{{#unless gender}}checked{{/unless}}/>
+									<label class="custom-control-label" for="sex-female"
+										>Nữ</label
+									>
 								</div>
 							</div>
 						</div>
@@ -121,11 +163,21 @@
 								<label for="height">Chiều Cao</label>
 							</div>
 							<div class="col-8 p-0">
-								<input type="range" class="custom-range" id="height" name="weight" min="0" max="300"
-									value="172" onchange="changeValueHeight(this)" />
+								<input
+									type="range"
+									class="custom-range"
+									id="height"
+									name="height"
+									min="0"
+									max="300"
+									value="172"
+									onchange="changeValueHeight(this)"
+								/>
 							</div>
-							<div class="col-1 p-0 d-flex align-items-center justify-content-end">
-								<p class="m-0 p-0" id="value-height">172</p>
+							<div
+								class="col-1 p-0 d-flex align-items-center justify-content-end"
+							>
+								<p class="m-0 p-0" id="value-height">{{ height }}</p>
 								<span id="unit">cm</span>
 							</div>
 						</div>
@@ -135,19 +187,35 @@
 								<label for="weight">Cân Nặng</label>
 							</div>
 							<div class="col-8 p-0">
-								<input type="range" class="custom-range" id="weight" name="weight" min="0" max="200"
-									value="60" onchange="changeValueWeight(this)" />
+								<input
+									type="range"
+									class="custom-range"
+									id="weight"
+									name="weight"
+									min="0"
+									max="200"
+									value="60"
+									onchange="changeValueWeight(this)"
+								/>
 							</div>
-							<div class="col-1 p-0 d-flex align-items-center justify-content-end">
-								<p class="m-0 p-0" id="value-weight">60</p>
+							<div
+								class="col-1 p-0 d-flex align-items-center justify-content-end"
+							>
+								<p class="m-0 p-0" id="value-weight">{{ weight }}</p>
 								<span id="unit">kg</span>
 							</div>
 						</div>
-
+						{{/with}}
 						<div class="form-group">
-							<label class="change-pwd-label" for="change_pwd">Thay Đổi Mật Khẩu</label>
-							<input type="checkbox" name="change_pwd" id="change_pwd"
-								onclick="clickChangePwdHandler(this)" />
+							<label class="change-pwd-label" for="change_pwd"
+								>Thay Đổi Mật Khẩu</label
+							>
+							<input
+								type="checkbox"
+								name="change_pwd"
+								id="change_pwd"
+								onclick="clickChangePwdHandler(this)"
+							/>
 						</div>
 
 						<div class="change-pwd-group" id="change-pwd-group">
@@ -156,8 +224,14 @@
 									<label for="old-pwd">Mật Khẩu Cũ</label>
 								</div>
 								<div class="col-9 p-0">
-									<input type="password" class="form-control rounded-0" value="" id="old-pwd"
-										name="old-pwd" required />
+									<input
+										type="password"
+										class="form-control rounded-0"
+										value=" "
+										id="old-pwd"
+										name="old-pwd"
+										required
+									/>
 									<div class="valid-feedback"></div>
 									<div class="invalid-feedback">Vui lòng điền Mật khẩu Cũ</div>
 								</div>
@@ -168,8 +242,14 @@
 									<label for="new-pwd">Mật Khẩu Mới</label>
 								</div>
 								<div class="col-9 p-0">
-									<input type="password" class="form-control rounded-0" id="new-pwd" value=""
-										name="new-pwd" required />
+									<input
+										type="password"
+										class="form-control rounded-0"
+										id="new-pwd"
+										value=" "
+										name="new-pwd"
+										required
+									/>
 									<div class="valid-feedback"></div>
 									<div class="invalid-feedback">Vui lòng điền Mật khẩu Mới</div>
 								</div>
@@ -180,8 +260,14 @@
 									<label for="new-pwd-confirm">Nhập Lại Mật Khẩu Mới</label>
 								</div>
 								<div class="col-9 p-0">
-									<input type="password" class="form-control rounded-0" id="new-pwd-confirm" value=""
-										name="new-pwd-confirm" required />
+									<input
+										type="password"
+										class="form-control rounded-0"
+										id="new-pwd-confirm"
+										value=" "
+										name="new-pwd-confirm"
+										required
+									/>
 									<div class="valid-feedback"></div>
 									<div class="invalid-feedback">
 										Vui lòng nhập lại Mật Khẩu Mới
@@ -193,6 +279,10 @@
 						<button type="submit" class="btn update-acc rounded-0 d-block">
 							CẬP NHẬT TÀI KHOẢN
 						</button>
+
+						<p class="text-danger">
+							{{ Data.Warning }}
+						</p>
 					</form>
 				</div>
 			</div>
