--- a/views/admin-list-account.hbs
+++ b/views/admin-list-account.hbs
@@ -17,49 +17,31 @@
                 <thead class="thead-dark">
                     <tr class="d-flex">
                         <th class="col-lg-3">Tên khách hàng</th>
-                        <th class="col-lg-1">Loại tài khoản</th>
+                        <th class="col-lg-2">Loại tài khoản</th>
                         <th class="col-lg-2">Username</th>
                         <th class="col-lg-3">Địa chỉ email</th>
-                        <th class="col-lg-3">Thao tác</th>
+                        <th class="col-lg-2">Thao tác</th>
                     </tr>
 
                 <tbody>
 
+                    {{#each Data.Users}}
+
                     <tr class="d-flex">
-                        <td class="col-lg-3 user-name">Tên khách hàng</td>
-                        <td class="col-lg-1 acc-type">User</td>
-                        <td class="col-lg-2 user-username">Username</td>
-                        <td class="col-lg-3 user-email">Email</td>
-                        <td class="col-lg-3 acc-act">
+                        <td class="col-lg-3 user-name">{{name}}</td>
+                        <td class="col-lg-2 acc-type">{{userType}}</td>
+                        <td class="col-lg-2 user-username">{{username}}</td>
+                        <td class="col-lg-3 user-email">{{email}}</td>
+                        <td class="col-lg-2 acc-act">
                             <button type="button" class="btn btn-primary btn-detail" data-toggle='modal'
                                 data-target='#form-model'>Update</button>
                             <button type="button" class="btn btn-danger btn-delete">Delete</button>
                         </td>
                     </tr>
 
-                    <tr class="d-flex">
-                        <td class="col-lg-3 user-name">Tên khách hàng</td>
-                        <td class="col-lg-1 acc-type">User</td>
-                        <td class="col-lg-2 user-username">Username</td>
-                        <td class="col-lg-3 user-email">Email</td>
-                        <td class="col-lg-3 acc-act">
-                            <button type="button" class="btn btn-primary btn-detail" data-toggle='modal'
-                                data-target='#form-model'>Update</button>
-                            <button type="button" class="btn btn-danger btn-delete">Delete</button>
-                        </td>
-                    </tr>
+                    {{/each}}
 
-                    <tr class="d-flex">
-                        <td class="col-lg-3 user-name">Tên khách hàng</td>
-                        <td class="col-lg-1 acc-type">User</td>
-                        <td class="col-lg-2 user-username">Username</td>
-                        <td class="col-lg-3 user-email">Email</td>
-                        <td class="col-lg-3 acc-act">
-                            <button type="button" class="btn btn-primary btn-detail" data-toggle='modal'
-                                data-target='#form-model'>Update</button>
-                            <button type="button" class="btn btn-danger btn-delete">Delete</button>
-                        </td>
-                    </tr>
+
 
 
                 </tbody>
@@ -68,3 +50,13 @@
         </div>
     </div>
 </div>
+
+<script>
+    let arrType = document.querySelectorAll('.acc-type');
+    for (let i = 0; i < arrType.length; i++) {
+        if (arrType[i].innerHTML == "0")
+            arrType[i].innerHTML = "User";
+        else arrType[i].innerHTML = "Admin";
+    }
+
+</script>
