--- a/views/admin-list-bill.hbs
+++ b/views/admin-list-bill.hbs
@@ -12,29 +12,29 @@
                 <thead class="thead-dark">
                     <tr class="d-flex">
                         <th class="col-lg-2">ID Đơn hàng</th>
-                        <th class="col-lg-3">Phương thức thanh toán</th>
+                        <th class="col-lg-2">Phương thức thanh toán</th>
                         <th class="col-lg-2">Giá</th>
-                        <th class="col-lg-1">Tình trạng</th>
+                        <th class="col-lg-2">Tình trạng</th>
                         <th class="col-lg-4">Thao tác</th>
                     </tr>
 
                 <tbody>
-{{#each Data.Bills}}
+                    {{#each Data.Bills}}
                     <tr class="d-flex">
                         <td class="col-lg-2 bill-id">{{id}}</td>
-                        <td class="col-lg-3 bill-user">{{paymentMethodToString}}</td>
+                        <td class="col-lg-2 bill-user">{{paymentMethodToString}}</td>
                         <td class="col-lg-2 bill-price">{{totalPrice}}đ</td>
-                        <td class="col-lg-1 bill-status">{{shipStatus}}</td>
+                        <td class="col-lg-2 bill-status">{{shipStatus}}</td>
                         <td class="col-lg-4 bill-act">
                             <button type="button" class="btn btn-primary btn-update" data-toggle='modal'
                                 data-target='#form-model'>Update</button>
-                            <button type="button" class="btn btn-primary btn-update" disabled>Đang giao</button>
+                            <button type="button" class="btn btn-primary btn-update">Đang giao</button>
                             <button type="button" class="btn btn-success btn-complete">Hoàn tất</button>
-                            <button type="button" class="btn btn-danger btn-delete" disabled>Delete</button>
+                            <button type="button" class="btn btn-danger btn-delete">Delete</button>
                         </td>
                     </tr>
 
-{{/each}}
+                    {{/each}}
                 </tbody>
                 </thead>
             </table>
